# personal

./: .gitignore  CMakeLists.txt  LICENSE  README.md
HelloWorld/: helloWorld.c
Projects/: test
Projects/2408/: game.py
Projects/Prime/prime_number/: CMakeLists.txt  prime.c  prime.h
Projects/Prime/prime_number_optimized/: CMakeLists.txt  primeOptimized.c  primeOptimized.h
Projects/binary_tree/: binary_tree  binary_tree_search  binary_tree_search.c
Projects/bouncing-balls/: main.py
Projects/connect4/: connect4  connect4.c
Projects/fizzbuzz/: CMakeLists.txt  fizzbuzz  fizzbuzz.c  fizzbuzz.h
Projects/hash_table/: CMakeLists.txt  hash_table  hash_table.c  hash_table.h
Projects/isPrime/: prime  prime.c  primeOptimized  primeOptimized.c
Projects/leetcode-python/: 2.add-two-numbers.py  3.longest-substring-without-repeating-characters.py  9.palindrome-number.py
Projects/memoization/fib-memoziation/: fib-memo.js
Projects/random_hsit/: ALG.py
Projects/sortingAlgorithms/: CMakeLists.txt  insertionSort  insertionSort.c  insertionSort.h
Projects/stickGame/: CMakeLists.txt  Stick-game.c  Stick-game.h  minMaxStickGame  minMaxStickGame.c  miniMaxTesting  miniMaxTesting.c  stickGame  stickGame.c
Projects/ticTacToe/: CMakeLists.txt  Tic-tac-toe.c  Tic-tac-toe.h  testing  testing.c  ticTacToe  ticTacToe.c  ticTacToeMiniMax  ticTacToeMiniMax.c  ticTacToeMiniMax2  ticTacToeMiniMax2.c  ticTacToeMiniMax3  ticTacToeMiniMax3.c
fizzbuzz/: fizzbuzz
lecture2/: 3points  3points.c
otherPrograms/helloWorldTest/: helloWorldTest.c
(+22 files in other folders)
